syntax = "proto3";
package files;

service FilesService {
    rpc GetFileId(FileName) returns (FileId);
    rpc GetFileName(FileId) returns (FileName);
    rpc PurchaseFile(PurchaseFileDetails) returns (PurchaseFileResponse);
}

message FileName {
    string file_name = 1;
}

message Empty {}

message FileId {
    string file_id = 1;
}

message PurchaseFileDetails {
    string file_id = 1;
    string buyer_id = 2;
}

message PurchaseFileResponse {
    bool success = 1;
}
